fixed contrast errors

--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,12 @@ h2{
 }
 h3{
     font-size: 23px;
-    background-color: #c33a19;
-    color: #ffffff;
+    background-color: #0d8fe5;
 }
 h4{
     font-size: 23px;
-    background-color: #c33a19;
+    background-color: #0d8fe5;
     text-align: center;
-    color: #ffffff
 }
 body{
     background-color: #f9a690;
